--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
+    "@sanity/astro": "^3.2.6",
+    "@sanity/client": "^7.1.0",
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.3",
+    "astro-portabletext": "^0.11.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-is": "^19.1.0",
+    "sanity": "^3.92.0",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.10"
   }
 }
