--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/react": "^4.3.0",
     "@sanity/astro": "^3.2.6",
     "@sanity/client": "^7.1.0",
+    "@sanity/image-url": "^1.1.0",
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.3",
     "astro-portabletext": "^0.11.1",
