--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@astrojs/vercel": "^8.1.5",
+    "@portabletext/to-html": "^2.0.14",
     "@sanity/astro": "^3.2.6",
     "@sanity/client": "^7.1.0",
     "@sanity/image-url": "^1.1.0",
